[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.3, 0.5, 1 )

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -100.0
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
text = "BUNGVO ENHANCED"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -50.0
margin_right = 75.0
margin_bottom = 50.0
custom_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 40.0
text = "Start Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 150.0
margin_bottom = 100.0
text = "Quit"

[node name="HighScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
text = "High Score: 0"
align = 1